force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Cajas__c.field-meta.xml
<CustomField>
    <fullName>Cajas__c</fullName>
    <label>Cajas</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>