force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/CBM__c.field-meta.xml
<CustomField>
    <fullName>CBM__c</fullName>
    <description>cubic meter</description>
    <label>CBM</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>