force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <label>Container</label>
    <referenceTo>Container__c</referenceTo>
    <relationshipLabel>Container Pedido Line Items</relationshipLabel>
    <relationshipName>Container_Pedido_Line_Items1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>