force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Gross_Weight__c.field-meta.xml
<CustomField>
    <fullName>Gross_Weight__c</fullName>
    <description>Peso bruto</description>
    <label>Gross Weight</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>