force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Net_Weight__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight__c</fullName>
    <description>Peso neto</description>
    <label>Net Weight</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>