force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Container Pedido Line Items</relationshipLabel>
    <relationshipName>Container_Pedido_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>