force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Total_Productos__c.field-meta.xml
<CustomField>
    <fullName>Total_Productos__c</fullName>
    <formula>Cajas__c * Unidades_por_Masterbox__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Productos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>