force-app/main/default/objects/Container_Pedido_Line_Item__c/fields/Unidades_por_Masterbox__c.field-meta.xml
<CustomField>
    <fullName>Unidades_por_Masterbox__c</fullName>
    <label>Unidades por Masterbox</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>